--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/animate.css">
     <title>Template 1</title>
   </head>
   <body>
@@ -36,15 +37,15 @@
 </nav>  
 <section id="cover">
     <div class="container">
-	 <div class="searchbar">
+	 <div class="searchbar ">
 	  <div class="col-sm-10 col-sm-offset-1">
 	   
 		  <form>
 		  
-			 <div class="form-group">
+			 <div class="form-group wow fadeInDown">
 			   <input type="text" class="form-control" id="inputSearch" placeholder="Where Are you planning to head today?">
 			 </div>
-			 <div class="form-group">
+			 <div class="form-group wow fadeInUp">
 			     <button type="button" class="btn btn-primary " id="sumbitButton">Search</button>
 			 </div>
 		  </form>
@@ -57,5 +58,9 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+     <script src="js/wow.min.js"></script>
+	<script>
+    new WOW().init();
+    </script>
   </body>
 </html>
