front page designed navigation not yet configured

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/animate.css">
+	 <link href="fontawesome/css/font-awesome.min.css" rel="stylesheet">
     <title>Template 1</title>
   </head>
   <body>
@@ -26,7 +27,7 @@
         <a class="nav-link" href="#About">About</a>
       </li>
 	  <li class="nav-item">
-	    <a class="nav-link" href="#services">Services</a>
+	    <a class="nav-link" href="#services">Our Team</a>
 	  </li>
       <li class="nav-item">
         <a class="nav-link" href="#footer-main">Contact</a>
@@ -53,6 +54,98 @@
 	  </div>
 	</div>
 </section>
+<section id="about">
+  <h1 class="wow fadeInDown"><u>About Us</u></h1>
+  <div class="container wow fadeInUp">
+  <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+   </div>
+  </section>
+ <section id="team">
+    <h1><u>Our Team</u></h1>
+   <div class="container">
+    <div class="card-columns">
+	    <div class="card">
+	    <img class="card-img-top" src="images/WillaHolland.jpg" alt="Thea">
+		</div>
+		<div class="card">
+		  <img class="card-img-top"src="images/felicity.jpg" alt="felictiy">
+		</div>
+		<div class="card">
+		 <img class="card-img-top" src="images/David.jpg" alt="John Diggle">
+		</div>
+		<div class="card">
+		  <img class="card-img-top" src="images/detective.jpg" alt="quentin">
+		</div>
+		<div class="card">
+		    <img class="card-img-top" src="images/diniah.jpg" alt="laurel">
+		</div>
+		<div class="card">
+		   <img class="card-img-top" src="images/drake.jpg" alt="Daniah">
+		</div>
+		<div class="card">
+		    <img class="card-img-bottom" src="images/wild.jpg" alt="Rene">
+		</div>
+	</div>
+   </div>
+ 
+ </section>
+ <section id="contact">
+     <h1><u>Contact Us</u></h1>
+		<div class="container">
+	   <div class="row">
+	   <div class="col-sm-6 col-md-6">
+	     <div class="card wow fadeInRight">
+		   <h5>Reach Out</h5>
+		   <hr/>
+		   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+		 </div>
+	   </div>
+		<div class="col-sm-6 col-md-6">
+		  <form>
+		   <div class="form-group wow fadeInLeft">
+		   <input type="email" class="form-control" id="inputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+		   </div>
+		    <div class="form-group wow fadeInLeft">
+		   <input type="name" class="form-control" id="inputName" aria-describedby="nameHelp" placeholder="Enter name">
+		   </div>
+		    <div class="form-group wow fadeInLeft">
+		    <textarea class="form-control" id="inputMessage" placeholder="Enter message" rows="3"></textarea>
+		   </div>
+		   <div class="form-group wow fadeInLeft">
+		   <button type="button" class="btn btn-primary btn-lg btn-block" id="sumbitButton">Sumbit</button>
+		   </div>
+		  </form>
+		</div>
+		</div>
+		</div>
+ </section>
+ <footer id="footer">
+    <div class="row">
+	 <div class="col-sm-6 col-md-6">
+	   <h5 class="wow fadeInDown">© Your company name</h5>
+	 </div>
+	  <div class="col-sm-6 col-md-6">
+	    
+	    <div class="social">
+		<h4 class="wow fadeInDown"><u>Follow Us</u></h4>
+       <div class="row wow fadeInUp">
+		 <div class="col-sm-2 ">
+		  <a href="#"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
+		 </div>
+		  <div class="col-sm-2 ">
+		  <a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
+		 </div>
+		  <div class="col-sm-2 ">
+		   <a href="#"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+		 </div>
+		</div>
+		</div>
+	</div>	
+	
+	 </div>
+	 
+	</div>
+ </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
