--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <li class="nav-item">
         <a class="nav-link" href="#About">About</a>
       </li>
-	  <li class="nav-item">
+	<!--  <li class="nav-item">
 	    <a class="nav-link" href="#services">Our Team</a>
-	  </li>
+	  </li>-->
       <li class="nav-item">
         <a class="nav-link" href="#footer-main">Contact</a>
       </li>
@@ -47,12 +47,31 @@
 			   <input type="text" class="form-control" id="inputSearch" placeholder="Where Are you planning to head today?">
 			 </div>
 			 <div class="form-group wow fadeInUp">
-			     <button type="button" class="btn btn-primary " id="sumbitButton">Search</button>
+			     <button type="button" class="btn btn-primary " id="sumbitButton" data-toggle="modal" data-target="#myModal">Search</button>
 			 </div>
 		  </form>
 		</div>
 	  </div>
 	</div>
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Just a bit more info</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        So how you spend your holiday
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Create my itenary</button>
+        <button type="button" class="btn btn-primary">I will do it by myself</button>
+      </div>
+    </div>
+  </div>
+</div>
 </section>
 <section id="about">
   <h1 class="wow fadeInDown"><u>About Us</u></h1>
@@ -151,7 +170,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-     <script src="js/wow.min.js"></script>
+     <script src="js/function.js"></script>    
+	<script src="js/wow.min.js"></script>
 	<script>
     new WOW().init();
     </script>
